iac/kustomize/rook/overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard-ingress
  namespace: rook-ceph
  annotations:
    # Required for NGINX to communicate with the HTTPS backend service
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # Optional: May be needed if the Ceph dashboard uses a self-signed certificate (common in default deployments)
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    external-dns.alpha.kubernetes.io/hostname: ceph-dashboard.home.bradandmarsha.com
    index.home.bradandmarsha.com/enabled: "true"
    index.home.bradandmarsha.com/name: "Ceph Dashboard"
    index.home.bradandmarsha.com/image: "https://media.home.bradandmarsha.com/media/ceph.svg"
    index.home.bradandmarsha.com/description: "Rook-Ceph storage cluster management UI"
    index.home.bradandmarsha.com/weight: "30"
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - ceph-dashboard.home.bradandmarsha.com
    secretName: certificate-ceph-dashboard
  rules:
  - host: ceph-dashboard.home.bradandmarsha.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 8443
